<resources>
    <string name="app_name">Ыйман нуру</string>
    <string name="bismilla" translatable="false">Бисмилла</string>
    <string name="designed_by" translatable="false">zim - тарабынан жасалды</string>
    <string name="text_test" translatable="false">Ислам негиздери\nбоюнча тест</string>
    <string name="text_yiman_nuru_arab" translatable="false">يمان نورو</string>
    <string name="text_kalima" translatable="false">لا اله الا الله محمد رسول الله</string>
    <string name="text_bilmilla" translatable="false">أعوذ بالله من الشيطان الرجيم \nبسم الله الرحمن الرحيم</string>
    <string name="text_yiman_nuru" translatable="false">Yiman Nuru</string>
    <string name="masnun_dubalar" translatable="false">Маснун дубалар</string>
    <string name="text_namaz_uyronuu" translatable="false">Намаз окуганды үйрөнүү</string>
    <string name="allanyn_99_ysymy" translatable="false">Алланын 99 ысымы</string>
    <string name="zikirdin_turloru" translatable="false">Зикирдин түрлөрү</string>
    <string name="tasbih" translatable="false">Тасбих</string>
    <string name="alty_sypat" translatable="false">Алты сыпат</string>
    <string name="txt_subxaanallah" translatable="false">СубханАллах</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="about_us_ru" translatable="false">О нас</string>
    <string name="about_us_kg" translatable="false">Биз жөнүндө</string>
    <string name="home_ru" translatable="false">Главная</string>
    <string name="home_kg" translatable="false">Башкы бет</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="main_page" translatable="false">Башкы бет</string>
    <string name="privacy_policy_ru" translatable="false">политика конфиденциальности</string>
    <string name="privacy_policy_kg" translatable="false">Купуялык саясаты</string>
    <string name="contacts_ru" translatable="false">Контакты</string>
    <string name="contacts_kg" translatable="false">Байланыштар</string>
    <string name="question_answer" translatable="false">Суроо-Жооп</string>
    <string name="time_kg" translatable="false">Саат:</string>
    <string name="start" translatable="false">Баштоо</string>
    <string name="level_kg" translatable="false">Деңгээл:</string>
    <string name="exit" translatable="false">Чыгуу</string>
    <string name="continue_kg" translatable="false">Улантуу</string>
    <string name="remaining_time_kg" translatable="false">Калган убакыт:</string>
    <string name="next" translatable="false">Кийинки</string>
    <string name="stay_kg" translatable="false">Калуу</string>
    <string name="start_kg" translatable="false">Баштоо</string>
    <string name="share_kg" translatable="false">Тиркемени бөлүшүү</string>
    <string name="question_at_time_text" translatable="false">Учурдагы суроо:</string>
    <string name="all_questions_text" translatable="false">Бардык суроо:</string>
</resources>