<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/bottom_menu_btn_home"
        android:title="@string/main_page"
        android:icon="@drawable/ic_baseline_home"
        android:iconTint="?attr/textFillColor"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />
    <item android:id="@+id/bottom_menu_btn_testG"
        android:title="@string/question_answer"
        android:icon="@drawable/ic_baseline_cyclone"
        android:iconTint="?attr/textFillColor"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        tools:ignore="AlwaysShowAction" />
    <item android:id="@+id/bottom_menu_btn_tasbih"
        android:title="@string/tasbih"
        android:icon="@drawable/ic_baseline_linear_scale_24"
        android:iconTint="?attr/textFillColor"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        tools:ignore="AlwaysShowAction" />
</menu>