<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MainActivity"
    android:id="@+id/drawer"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/toolbar_top"
            layout="@layout/my_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <RelativeLayout
            android:id="@+id/banner_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/banner_img"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="-20dp"
                android:background="@drawable/slide_1"
                android:visibility="visible"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_yiman_nuru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/banner_img"
                android:layout_marginTop="-8dp"
                android:layout_marginBottom="0dp"
                android:background="#015B38"
                android:fontFamily="cursive"
                android:padding="5dp"
                android:text="@string/text_yiman_nuru"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="MissingConstraints,SmallSp" />


            <HorizontalScrollView
                android:layout_margin="5dp"
                android:layout_below="@+id/text_yiman_nuru"
                android:id="@+id/horizontal_scroll_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:scrollbars="horizontal"
                android:scrollbarSize="01dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarThumbHorizontal="@color/dark_blue_1"
                >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                >
                    <Button
                        android:id="@+id/horizontal_btn_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_page"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark_blue_1"
                        android:textAllCaps="false"
                        android:padding="10dp"
                        android:background="@drawable/bg_button_outline"
                        android:layout_margin="10dp"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/horizontal_btn_tasbih"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tasbih"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:textColor="@color/dark_blue_1"
                        android:background="@drawable/bg_button_outline"
                        android:layout_margin="10dp"
                        android:textAllCaps="false"
                        style="?android:attr/buttonBarButtonStyle" />


                    <Button
                        android:id="@+id/horizontal_btn_zikir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zikirdin_turloru"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark_blue_1"
                        android:background="@drawable/bg_button_outline"
                        android:layout_margin="10dp"
                        android:textAllCaps="false"
                        android:padding="10dp"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/horizontal_btn_masnun_duba"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/masnun_dubalar"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark_blue_1"
                        android:background="@drawable/bg_button_outline"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        style="?android:attr/buttonBarButtonStyle" />
                    <Button
                        android:id="@+id/horizontal_btn_alty_sypat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alty_sypat"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark_blue_1"
                        android:background="@drawable/bg_button_outline"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/horizontal_btn_allahtyn_ysymdary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allanyn_99_ysymy"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark_blue_1"
                        android:background="@drawable/bg_button_outline"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        style="?android:attr/buttonBarButtonStyle" />


            </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/fragments_block"
            app:layout_constraintTop_toBottomOf="@+id/banner_block"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            tools:ignore="MissingConstraints">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/place_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>
        </RelativeLayout>


            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="#015B38"
                android:padding="5dp"
                app:srcCompat="@drawable/designed_by"
                tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/menu"

        />


</androidx.drawerlayout.widget.DrawerLayout>