<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainFragment">


   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="10dp">

       <LinearLayout
           android:id="@+id/btns_blog_1"
           android:layout_width="match_parent"
           android:layout_height="140dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:weightSum="100"
           >

           <androidx.cardview.widget.CardView
               android:id="@+id/btn_alty_sypat"
               android:layout_width="0dp"
               android:layout_weight="50"
               android:layout_height="fill_parent"
               android:backgroundTint="?attr/colorPrimaryVariant"
               app:cardCornerRadius="10dp"
               android:layout_margin="5dp"

               >

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_margin="5dp"
                   android:gravity="center"
                   android:orientation="vertical">

                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:src="@drawable/ic___sypat"
                       android:layout_weight="1"

                       />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:text="@string/alty_sypat"
                       android:textColor="@color/white"
                       android:textSize="14sp"
                       android:textAlignment="center"
                       android:textStyle="bold"
                       android:layout_weight="3"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/btn_allahtyn_ysymdary"
               android:layout_width="0dp"
               android:layout_weight="50"
               android:layout_height="fill_parent"
               android:backgroundTint="?attr/colorPrimaryVariant"
               app:cardCornerRadius="10dp"
               android:layout_margin="5dp"

               >

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_margin="5dp"
                   android:gravity="center"
                   android:orientation="vertical">

                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:src="@drawable/ic_allanyny_99_ysymy"
                       android:layout_weight="1"

                       />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:text="@string/allanyn_99_ysymy"
                       android:textColor="@color/white"
                       android:textSize="14sp"
                       android:textAlignment="center"
                       android:textStyle="bold"
                       android:layout_weight="3"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
       </LinearLayout>
       <LinearLayout
           android:id="@+id/btns_blog_2"
           app:layout_constraintTop_toBottomOf="@+id/btns_blog_1"
           android:layout_width="match_parent"
           android:layout_height="140dp"
           app:layout_constraintStart_toStartOf="parent"
           android:weightSum="100"
           >

           <androidx.cardview.widget.CardView
               android:id="@+id/btn_masnun_duba"
               android:layout_width="0dp"
               android:layout_weight="50"
               android:layout_height="fill_parent"
               android:backgroundTint="?attr/colorPrimaryVariant"
               app:cardCornerRadius="10dp"
               android:layout_margin="5dp"

               >

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_margin="5dp"
                   android:gravity="center"
                   android:orientation="vertical">

                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:src="@drawable/ic_masnun_dubalar"
                       android:layout_weight="1"/>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:text="@string/masnun_dubalar"
                       android:textColor="@color/white"
                       android:textSize="14sp"
                       android:textStyle="bold"
                       android:layout_weight="3"
                       android:textAlignment="center"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/btn_zikir"
               android:layout_width="0dp"
               android:layout_weight="50"
               android:layout_height="fill_parent"
               android:backgroundTint="?attr/colorPrimaryVariant"
               app:cardCornerRadius="10dp"
               android:layout_margin="5dp"

               >

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_margin="5dp"
                   android:gravity="center"
                   android:orientation="vertical">

                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:src="@drawable/ic_zikir"
                       android:layout_weight="1"

                       />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:text="@string/zikirdin_turloru"
                       android:textColor="@color/white"
                       android:textSize="14sp"
                       android:textAlignment="center"
                       android:textStyle="bold"
                       android:layout_weight="3"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
       </LinearLayout>


   </androidx.constraintlayout.widget.ConstraintLayout>







</LinearLayout>